# razerd

./: Cargo.toml  Makefile  README.md  razerd.service  razerd.timer
.github/workflows/: ci.yml  release.yml
contrib/: razerd-battery-notify  razerd-battery-notify.service  razerd-battery-notify.timer
src/: main.rs
